--- a/public/login-page-styling.css
+++ b/public/login-page-styling.css
@@ -1,37 +1,37 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: rgb(1,113,63); /* Dark background color */
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(1,113,63); /* Dark background color */
+}
 
-  body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('/image-data/flm-background.jpg') no-repeat center center fixed;
-    background-size: 80%; /* Adjust the size as needed */
-    filter: blur(8px); /* Adjust the blur intensity */
-    z-index: -1; /* Place the background behind the content */
-  }
-  
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/image-data/flm-background.jpg') no-repeat center center fixed;
+  background-size: 80%; /* Adjust the size as needed */
+  filter: blur(8px); /* Adjust the blur intensity */
+  z-index: -1; /* Place the background behind the content */
+}
 
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative; /* Ensure it stays on top of the blurred background */
-  }
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative; /* Ensure it stays on top of the blurred background */
+}
+
   h1 {
     margin-bottom: 20px;
-    color: #ffffff; /* Green color for headings */
+    color: #ffffff; /* White color for headings */
   }
 
   form {
@@ -68,6 +68,17 @@ body {
   button:hover {
     background-color: #005b32; /* Darker green on hover */
   }
+
+  /* Style for the "Don't have an account?" link */
+#no-account {
+  color: #ffffff; /* Green color to match the button */
+  text-decoration: none; /* Remove underline */
+  font-weight: bold; /* Make text bold */
+}
+
+#no-account:hover {
+  text-decoration: underline; /* Add underline on hover */
+}
 
 
 /* Popup container */
@@ -127,16 +138,4 @@ body {
 
 .popup-ok:hover {
   background-color: #005d2a; /* Darker green on hover */
-}
-
-
-/* Style for the "Already have an account?" link */
-#already-have-account {
-  color: #ffffff; /* Green color to match the button */
-  text-decoration: none; /* Remove underline */
-  font-weight: bold; /* Make text bold */
-}
-
-#already-have-account:hover {
-  text-decoration: underline; /* Add underline on hover */
 }
