--- a/public/home-page-styling.css
+++ b/public/home-page-styling.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 /* Apply Rubik font to the entire page */
 body {
@@ -35,6 +36,7 @@ body {
     font-size: 30px;
     text-align: center;
     flex: 1; /* This will center the title */
+    font-family: "Inter", sans-serif;
 }
 
 .chat-container {
@@ -307,7 +309,8 @@ body {
     display: block;
     border-bottom: 1px solid #4CAF50; /* Optional: border to separate items */
     font-size: 25px;
-    font-family: 'Rubik', sans-serif; /* Apply the Rubik font */
+    
+    font-family: "Inter", sans-serif;
 }
 
 .dropdown-content a:last-child {
@@ -333,4 +336,44 @@ body {
     border-radius: 50%;
     border: 2px solid #fff; /* Add a border to the image for better visibility */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a shadow for a lifted effect */
+}
+
+
+#userInfo {
+    color: rgb(255, 255, 255); /* Adjust text color */
+    
+    font-size: 20px; /* Increase font size */
+    font-weight: bold; /* Make the font bold */
+    background-color: #000000; /* Set background color */
+    height: 10%; /* Set height */
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    /* Flexbox settings to center content */
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    text-align: center; /* Ensure text is centered within the element */
+    font-size: 25px;
+    font-family: "Inter", sans-serif;
+}
+
+.spinner {
+    border: 4px solid #f3f3f3; /* Light grey */
+    border-top: 4px solid #01713F; /* Green */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Modify the #sendButton styling to handle disabled state */
+#sendButton:disabled {
+    background-color: #95a5a6; /* Gray background when disabled */
+    cursor: not-allowed;
 }
