--- a/Views/login-page.ejs
+++ b/Views/login-page.ejs
@@ -20,6 +20,11 @@
     </form>
     <p><a href="/register" id="no-account">Don't have an account? Register here</a></p>
   </div>
+  
+  <div id="spinner-container" style="display: none;">
+    <div id="spinner"></div>
+  </div>
+  
 
   <!-- Popup HTML -->
   <div id="popup" class="popup">
