--- a/Views/home-page.ejs
+++ b/Views/home-page.ejs
@@ -46,10 +46,12 @@
         <!-- Main Chat Area -->
         <div class="chat-main-container">
             <main class="chat-main">
-                <div class="messages">
+                <div class="messages" id="messagesContainer">
                     <!-- Messages will be dynamically inserted here via JavaScript -->
                 </div>
             </main>
+
+            
 
             <!-- Chat Input -->
             <footer class="chat-footer">
@@ -63,6 +65,11 @@
             </footer>
         </div>
     </div>
+
+    <div id="spinnerContainer" style="display: none;">
+        <div class="message-spinner"></div>
+    </div>
+
 
     <!-- JavaScript Files -->
     <script src="/javascript/home-page-javascript.js"></script>
