Streamig added and the backend handle

--- a/Views/home-page.ejs
+++ b/Views/home-page.ejs
@@ -8,17 +8,19 @@
 </head>
 <body>
     <!-- Logo as a Dropdown Button -->
+<!-- Logo as a Dropdown Button -->
+<div class="dropdown-container">
     <div class="dropdown">
         <button class="dropbtn">
-            <img src="/image-data/flm-green-logo.png" alt="User Info" class="logo" id="logo">
+            <img src="/image-data/flm-green-logo.png" alt="Logo" class="logo">
         </button>
         <div class="dropdown-content">
-            <div id="userInfo">
-                <!-- User info will be injected here via JavaScript -->
-            </div>
-            <a href="#" id="logoutOption" class="common-button">Logout</a>
+            <div id="userInfo">User Info</div>
+            <a href="#" class="common-button" id="logoutOption">Logout</a>
         </div>
     </div>
+</div>
+
 
 
     <!-- Chat Container -->
